SONAR-18856 Refactor properties