@@ -19,13 +19,13 @@
  */
 package org.sonar.server.setting.ws;
 
-import com.google.common.collect.ImmutableMap;
 import com.google.gson.Gson;
 import com.tngtech.java.junit.dataprovider.DataProvider;
 import com.tngtech.java.junit.dataprovider.DataProviderRunner;
 import com.tngtech.java.junit.dataprovider.UseDataProvider;
 import java.net.HttpURLConnection;
 import java.util.List;
+import java.util.Map;
 import java.util.Random;
 import javax.annotation.Nullable;
 import org.junit.Before;
@@ -46,6 +46,7 @@ import org.sonar.db.DbSession;
 import org.sonar.db.DbTester;
 import org.sonar.db.component.ComponentDto;
 import org.sonar.db.component.ComponentTesting;
+import org.sonar.db.portfolio.PortfolioDto;
 import org.sonar.db.property.PropertyDbTester;
 import org.sonar.db.property.PropertyDto;
 import org.sonar.db.property.PropertyQuery;
@@ -63,7 +64,6 @@ import org.sonar.server.ws.TestRequest;
 import org.sonar.server.ws.TestResponse;
 import org.sonar.server.ws.WsActionTester;
 
-import static com.google.common.collect.Lists.newArrayList;
 import static java.lang.String.format;
 import static java.util.Collections.singletonList;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -184,7 +184,7 @@ public class SetActionIT {
 
   @Test
   public void persist_several_multi_value_setting() {
-    callForMultiValueGlobalSetting("my.key", newArrayList("first,Value", "second,Value", "third,Value"));
+    callForMultiValueGlobalSetting("my.key", List.of("first,Value", "second,Value", "third,Value"));
 
     String expectedValue = "first%2CValue,second%2CValue,third%2CValue";
     assertGlobalSetting("my.key", expectedValue);
@@ -193,7 +193,7 @@ public class SetActionIT {
 
   @Test
   public void persist_one_multi_value_setting() {
-    callForMultiValueGlobalSetting("my.key", newArrayList("first,Value"));
+    callForMultiValueGlobalSetting("my.key", List.of("first,Value"));
 
     assertGlobalSetting("my.key", "first%2CValue");
   }
@@ -208,7 +208,7 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("firstField")
           .name("First Field")
           .type(PropertyType.STRING)
@@ -219,10 +219,10 @@ public class SetActionIT {
           .build()))
       .build());
 
-    callForGlobalPropertySet("my.key", newArrayList(
-      GSON.toJson(ImmutableMap.of("firstField", "firstValue", "secondField", "secondValue")),
-      GSON.toJson(ImmutableMap.of("firstField", "anotherFirstValue", "secondField", "anotherSecondValue")),
-      GSON.toJson(ImmutableMap.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
+    callForGlobalPropertySet("my.key", List.of(
+      GSON.toJson(Map.of("firstField", "firstValue", "secondField", "secondValue")),
+      GSON.toJson(Map.of("firstField", "anotherFirstValue", "secondField", "anotherSecondValue")),
+      GSON.toJson(Map.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
 
     assertThat(dbClient.propertiesDao().selectGlobalProperties(dbSession)).hasSize(7);
     assertGlobalSetting("my.key", "1,2,3");
@@ -245,7 +245,7 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("firstField")
           .name("First Field")
           .type(PropertyType.STRING)
@@ -266,10 +266,10 @@ public class SetActionIT {
       newGlobalPropertyDto("my.key.4.firstField", "anotherOldFirstValue"),
       newGlobalPropertyDto("my.key.4.secondField", "anotherOldSecondValue"));
 
-    callForGlobalPropertySet("my.key", newArrayList(
-      GSON.toJson(ImmutableMap.of("firstField", "firstValue", "secondField", "secondValue")),
-      GSON.toJson(ImmutableMap.of("firstField", "anotherFirstValue", "secondField", "anotherSecondValue")),
-      GSON.toJson(ImmutableMap.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
+    callForGlobalPropertySet("my.key", List.of(
+      GSON.toJson(Map.of("firstField", "firstValue", "secondField", "secondValue")),
+      GSON.toJson(Map.of("firstField", "anotherFirstValue", "secondField", "anotherSecondValue")),
+      GSON.toJson(Map.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
 
     assertThat(dbClient.propertiesDao().selectGlobalProperties(dbSession)).hasSize(7);
     assertGlobalSetting("my.key", "1,2,3");
@@ -293,7 +293,7 @@ public class SetActionIT {
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
       .onQualifiers(Qualifiers.PROJECT)
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("firstField")
           .name("First Field")
           .type(PropertyType.STRING)
@@ -314,9 +314,9 @@ public class SetActionIT {
       newComponentPropertyDto("my.key.1.firstField", "componentSecondValue", project));
     logInAsProjectAdministrator(project);
 
-    callForComponentPropertySet("my.key", newArrayList(
-        GSON.toJson(ImmutableMap.of("firstField", "firstValue", "secondField", "secondValue")),
-        GSON.toJson(ImmutableMap.of("firstField", "anotherFirstValue", "secondField", "anotherSecondValue"))),
+    callForComponentPropertySet("my.key", List.of(
+        GSON.toJson(Map.of("firstField", "firstValue", "secondField", "secondValue")),
+        GSON.toJson(Map.of("firstField", "anotherFirstValue", "secondField", "anotherSecondValue"))),
       project.getKey());
 
     assertThat(dbClient.propertiesDao().selectGlobalProperties(dbSession)).hasSize(3);
@@ -349,7 +349,7 @@ public class SetActionIT {
     dbClient.metricDao().insert(dbSession, newMetricDto().setKey("metric_key_2"));
     dbSession.commit();
 
-    callForMultiValueGlobalSetting("my_key", newArrayList("metric_key_1", "metric_key_2"));
+    callForMultiValueGlobalSetting("my_key", List.of("metric_key_1", "metric_key_2"));
 
     assertGlobalSetting("my_key", "metric_key_1,metric_key_2");
   }
@@ -369,7 +369,7 @@ public class SetActionIT {
     db.users().insertUser(newUserDto().setLogin("login.1"));
     db.users().insertUser(newUserDto().setLogin("login.2"));
 
-    callForMultiValueGlobalSetting("my.key", newArrayList("login.1", "login.2"));
+    callForMultiValueGlobalSetting("my.key", List.of("login.1", "login.2"));
 
     assertGlobalSetting("my.key", "login.1,login.2");
   }
@@ -629,44 +629,35 @@ public class SetActionIT {
 
   @Test
   public void fail_when_no_key() {
-    assertThatThrownBy(() -> {
-      callForGlobalSetting(null, "my value");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting(null, "my value"))
       .isInstanceOf(IllegalArgumentException.class);
   }
 
   @Test
   public void fail_when_empty_key_value() {
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("  ", "my value");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("  ", "my value"))
       .isInstanceOf(IllegalArgumentException.class)
       .hasMessage("The 'key' parameter is missing");
   }
 
   @Test
   public void fail_when_no_value() {
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("my.key", null);
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("my.key", null))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Either 'value', 'values' or 'fieldValues' must be provided");
   }
 
   @Test
   public void fail_when_empty_value() {
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("my.key", "");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("my.key", ""))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("A non empty value must be provided");
   }
 
   @Test
   public void fail_when_one_empty_value_on_multi_value() {
-    assertThatThrownBy(() -> {
-      callForMultiValueGlobalSetting("my.key", newArrayList("oneValue", "  ", "anotherValue"));
-    })
+    List<String> values = List.of("oneValue", "  ", "anotherValue");
+    assertThatThrownBy(() -> callForMultiValueGlobalSetting("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("A non empty value must be provided");
   }
@@ -675,9 +666,7 @@ public class SetActionIT {
   public void throw_ForbiddenException_if_not_system_administrator() {
     userSession.logIn().setNonSystemAdministrator();
 
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("my.key", "my value");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("my.key", "my value"))
       .isInstanceOf(ForbiddenException.class)
       .hasMessage("Insufficient privileges");
   }
@@ -695,9 +684,7 @@ public class SetActionIT {
       .build());
     i18n.put("property.error.notInteger", "Not an integer error message");
 
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("my.key", "My Value");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("my.key", "My Value"))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Not an integer error message");
   }
@@ -718,9 +705,8 @@ public class SetActionIT {
     dbClient.metricDao().insert(dbSession, newMetricDto().setKey("metric_disabled_key").setEnabled(false));
     dbSession.commit();
 
-    assertThatThrownBy(() -> {
-      callForMultiValueGlobalSetting("my_key", newArrayList("metric_key", "metric_disabled_key"));
-    })
+    List<String> values = List.of("metric_key", "metric_disabled_key");
+    assertThatThrownBy(() -> callForMultiValueGlobalSetting("my_key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Error when validating metric setting with key 'my_key' and values [metric_key, metric_disabled_key]. A value is not a valid metric key.");
   }
@@ -740,9 +726,8 @@ public class SetActionIT {
     db.users().insertUser(newUserDto().setLogin("login.1"));
     db.users().insertUser(newUserDto().setLogin("login.2").setActive(false));
 
-    assertThatThrownBy(() -> {
-      callForMultiValueGlobalSetting("my.key", newArrayList("login.1", "login.2"));
-    })
+    List<String> values = List.of("login.1", "login.2");
+    assertThatThrownBy(() -> callForMultiValueGlobalSetting("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Error when validating login setting with key 'my.key' and values [login.1, login.2]. A value is not a valid login.");
   }
@@ -759,9 +744,8 @@ public class SetActionIT {
       .defaultValue("default")
       .build());
 
-    assertThatThrownBy(() -> {
-      callForMultiValueGlobalSetting("my.key", newArrayList("My Value", "My Other Value"));
-    })
+    List<String> values = List.of("My Value", "My Other Value");
+    assertThatThrownBy(() -> callForMultiValueGlobalSetting("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Error when validating setting with key 'my.key' and value [My Value, My Other Value]");
   }
@@ -779,9 +763,7 @@ public class SetActionIT {
       .onlyOnQualifiers(Qualifiers.PROJECT)
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("my.key", "42");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("my.key", "42"))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Setting 'my.key' cannot be global");
   }
@@ -811,7 +793,7 @@ public class SetActionIT {
 
   @Test
   public void fail_when_property_with_definition_when_component_qualifier_does_not_match() {
-    ComponentDto portfolio = db.components().insertPrivatePortfolio();
+    PortfolioDto portfolio = db.components().insertPrivatePortfolioDto();
     definitions.addComponent(PropertyDefinition
       .builder("my.key")
       .name("foo")
@@ -822,12 +804,10 @@ public class SetActionIT {
       .defaultValue("default")
       .onQualifiers(Qualifiers.PROJECT)
       .build());
-    i18n.put("qualifier." + portfolio.qualifier(), "CptLabel");
-    logInAsProjectAdministrator(portfolio);
+    i18n.put("qualifier." + portfolio.getQualifier(), "CptLabel");
+    logInAsPortfolioAdministrator(portfolio);
 
-    assertThatThrownBy(() -> {
-      callForProjectSettingByKey("my.key", "My Value", portfolio.getKey());
-    })
+    assertThatThrownBy(() -> callForProjectSettingByKey("my.key", "My Value", portfolio.getKey()))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Setting 'my.key' cannot be set on a CptLabel");
   }
@@ -885,18 +865,15 @@ public class SetActionIT {
     i18n.put("qualifier." + component.qualifier(), "QualifierLabel");
     logInAsProjectAdministrator(root);
 
-    assertThatThrownBy(() -> {
-      callForProjectSettingByKey("my.key", "My Value", component.getKey());
-    })
+    assertThatThrownBy(() -> callForProjectSettingByKey("my.key", "My Value", component.getKey()))
       .isInstanceOf(NotFoundException.class)
       .hasMessage(String.format("Component key '%s' not found", component.getKey()));
   }
 
   @Test
   public void fail_when_single_and_multi_value_provided() {
-    assertThatThrownBy(() -> {
-      call("my.key", "My Value", newArrayList("Another Value"), null, null);
-    })
+    List<String> value = List.of("Another Value");
+    assertThatThrownBy(() -> call("my.key", "My Value", value, null, null))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Either 'value', 'values' or 'fieldValues' must be provided");
   }
@@ -912,9 +889,7 @@ public class SetActionIT {
       .multiValues(true)
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalSetting("my.key", "My Value");
-    })
+    assertThatThrownBy(() -> callForGlobalSetting("my.key", "My Value"))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Parameter 'value' must be used for single value setting. Parameter 'values' must be used for multi value setting.");
   }
@@ -930,9 +905,7 @@ public class SetActionIT {
       .multiValues(false)
       .build());
 
-    assertThatThrownBy(() -> {
-      callForMultiValueGlobalSetting("my.key", newArrayList("My Value"));
-    })
+    assertThatThrownBy(() -> callForMultiValueGlobalSetting("my.key", List.of("My Value")))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Parameter 'value' must be used for single value setting. Parameter 'values' must be used for multi value setting.");
   }
@@ -947,7 +920,7 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("firstField")
           .name("First Field")
           .type(PropertyType.STRING)
@@ -958,12 +931,10 @@ public class SetActionIT {
           .build()))
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", newArrayList(
-        GSON.toJson(ImmutableMap.of("firstField", "firstValue", "secondField", "secondValue")),
-        GSON.toJson(ImmutableMap.of("firstField", "", "secondField", "")),
-        GSON.toJson(ImmutableMap.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
-    })
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", List.of(
+      GSON.toJson(Map.of("firstField", "firstValue", "secondField", "secondValue")),
+      GSON.toJson(Map.of("firstField", "", "secondField", "")),
+      GSON.toJson(Map.of("firstField", "yetFirstValue", "secondField", "yetSecondValue")))))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("A non empty value must be provided");
   }
@@ -978,7 +949,7 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("firstField")
           .name("First Field")
           .type(PropertyType.STRING)
@@ -989,19 +960,17 @@ public class SetActionIT {
           .build()))
       .build());
 
-    callForGlobalPropertySet("my.key", newArrayList(
-      GSON.toJson(ImmutableMap.of("firstField", "firstValue", "secondField", "secondValue")),
-      GSON.toJson(ImmutableMap.of("firstField", "anotherFirstValue", "secondField", "")),
-      GSON.toJson(ImmutableMap.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
+    callForGlobalPropertySet("my.key", List.of(
+      GSON.toJson(Map.of("firstField", "firstValue", "secondField", "secondValue")),
+      GSON.toJson(Map.of("firstField", "anotherFirstValue", "secondField", "")),
+      GSON.toJson(Map.of("firstField", "yetFirstValue", "secondField", "yetSecondValue"))));
 
     assertGlobalSetting("my.key", "1,2,3");
   }
 
   @Test
   public void fail_when_property_set_setting_is_not_defined() {
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", singletonList("{\"field\":\"value\"}"));
-    })
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", singletonList("{\"field\":\"value\"}")))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Setting 'my.key' is undefined");
   }
@@ -1016,16 +985,15 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("field")
           .name("Field")
           .type(PropertyType.STRING)
           .build()))
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", newArrayList(GSON.toJson(ImmutableMap.of("field", "value", "unknownField", "anotherValue"))));
-    })
+    List<String> values = List.of(GSON.toJson(Map.of("field", "value", "unknownField", "anotherValue")));
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Unknown field key 'unknownField' for setting 'my.key'");
   }
@@ -1040,16 +1008,15 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("field")
           .name("Field")
           .type(PropertyType.INTEGER)
           .build()))
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", newArrayList(GSON.toJson(ImmutableMap.of("field", "notAnInt"))));
-    })
+    List<String> values = List.of(GSON.toJson(Map.of("field", "notAnInt")));
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Error when validating setting with key 'my.key'. Field 'field' has incorrect value 'notAnInt'.");
   }
@@ -1064,16 +1031,15 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("field")
           .name("Field")
           .type(PropertyType.STRING)
           .build()))
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", newArrayList("{\"field\": null}"));
-    })
+    List<String> values = List.of("{\"field\": null}");
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("A non empty value must be provided");
   }
@@ -1088,16 +1054,15 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("field")
           .name("Field")
           .type(PropertyType.STRING)
           .build()))
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", newArrayList("incorrectJson:incorrectJson"));
-    })
+    List<String> values = List.of("incorrectJson:incorrectJson");
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("JSON 'incorrectJson:incorrectJson' does not respect expected format for setting 'my.key'. " +
         "Ex: {\"field1\":\"value1\", \"field2\":\"value2\"}");
@@ -1113,16 +1078,15 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(
+      .fields(List.of(
         PropertyFieldDefinition.build("field")
           .name("Field")
           .type(PropertyType.STRING)
           .build()))
       .build());
 
-    assertThatThrownBy(() -> {
-      callForGlobalPropertySet("my.key", newArrayList("[{\"field\":\"v1\"}, {\"field\":\"v2\"}]"));
-    })
+    List<String> values = List.of("[{\"field\":\"v1\"}, {\"field\":\"v2\"}]");
+    assertThatThrownBy(() -> callForGlobalPropertySet("my.key", values))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("JSON '[{\"field\":\"v1\"}, {\"field\":\"v2\"}]' does not respect expected format for setting 'my.key'. " +
         "Ex: {\"field1\":\"value1\", \"field2\":\"value2\"}");
@@ -1138,29 +1102,25 @@ public class SetActionIT {
       .subCategory("subCat")
       .type(PropertyType.PROPERTY_SET)
       .defaultValue("default")
-      .fields(newArrayList(PropertyFieldDefinition.build("firstField").name("First Field").type(PropertyType.STRING).build()))
+      .fields(List.of(PropertyFieldDefinition.build("firstField").name("First Field").type(PropertyType.STRING).build()))
       .build());
     i18n.put("qualifier." + Qualifiers.PROJECT, "Project");
     ComponentDto project = db.components().insertPrivateProject().getMainBranchComponent();
     logInAsProjectAdministrator(project);
 
-    assertThatThrownBy(() -> {
-      callForComponentPropertySet("my.key", newArrayList(
-        GSON.toJson(ImmutableMap.of("firstField", "firstValue"))), project.getKey());
-    })
+    List<String> values = List.of(GSON.toJson(Map.of("firstField", "firstValue")));
+    assertThatThrownBy(() -> callForComponentPropertySet("my.key", values, project.getKey()))
       .isInstanceOf(BadRequestException.class)
       .hasMessage("Setting 'my.key' cannot be set on a Project");
   }
 
   @Test
   public void fail_when_component_not_found() {
-    assertThatThrownBy(() -> {
-      ws.newRequest()
-        .setParam("key", "foo")
-        .setParam("value", "2")
-        .setParam("component", "unknown")
-        .execute();
-    })
+    assertThatThrownBy(() -> ws.newRequest()
+      .setParam("key", "foo")
+      .setParam("value", "2")
+      .setParam("component", "unknown")
+      .execute())
       .isInstanceOf(NotFoundException.class)
       .hasMessage("Component key 'unknown' not found");
   }
@@ -1171,13 +1131,11 @@ public class SetActionIT {
     logInAsProjectAdministrator(project);
     String settingKey = ProcessProperties.Property.JDBC_URL.getKey();
 
-    assertThatThrownBy(() -> {
-      ws.newRequest()
-        .setParam("key", settingKey)
-        .setParam("value", "any value")
-        .setParam("component", project.getKey())
-        .execute();
-    })
+    assertThatThrownBy(() -> ws.newRequest()
+      .setParam("key", settingKey)
+      .setParam("value", "any value")
+      .setParam("component", project.getKey())
+      .execute())
       .isInstanceOf(IllegalArgumentException.class)
       .hasMessage(format("Setting '%s' can only be used in sonar.properties", settingKey));
   }
@@ -1275,7 +1233,10 @@ public class SetActionIT {
 
       assertThat(property.getValue()).isEqualTo(value);
     }
+  }
 
+  private void logInAsPortfolioAdministrator(PortfolioDto portfolio) {
+    userSession.logIn().addPortfolioPermission(UserRole.ADMIN, portfolio);
   }
 
   private void logInAsProjectAdministrator(ComponentDto project) {
